# SharedDoc

./: .gitignore  .repl_history  README.md  package-lock.json  package.json  sample.txt  webpack.dev.config.ts
aqua/: shared_doc.aqua
marine/shared_doc/: Cargo.toml  Config.toml  build.sh  cfg.json  deploy.sh  test.sh
marine/shared_doc/artifacts/: shared_doc.wasm
marine/shared_doc/src/: main.rs
src/: App.tsx  index.html  index.tsx
src/_aqua/: getting-started.ts
src/components/: EssayForm.js  NameForm.js
