[package]
name = "shared_doc"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"
publish = false

[[bin]]
name = "shared_doc"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version = "0.6.14", features = ["logger"] }
wasm-tracing-allocator = "0.1.1"
log = "0.4.8"

[dev-dependencies]
marine-rs-sdk-test = "0.3.0"